Closed Bug 1467503 Opened 7 years ago Closed 7 years ago

dom/base/nsINode.cpp fails to compile with --disable-accessibility

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox60 --- unaffected
firefox61 --- unaffected
firefox62 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: regression)

Attachments

(1 file)

0:12.02 dom/base/nsINode.cpp:1240:25: error: cannot initialize a parameter of type 'nsISupports *' with an lvalue of type 'mozilla::dom::AccessibleNode *' 0:12.02 cb.NoteXPCOMChild(anode); 0:12.02 ^~~~~
Tokio, could you take a look at the bug please?
Flags: needinfo?(dora.tokio)
No need - I have a patch...
Flags: needinfo?(dora.tokio)
Attachment #8984197 - Flags: review?(bugs) → review?(surkov.alexander)
Attachment #8984197 - Flags: review?(surkov.alexander) → review+
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/9e717c6aaa70 Make it compile with --disable-accessibility again. r=surkov
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: