Bug 1467503 - Make it compile with --disable-accessibility again.  r=surkov